--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <div class="titulo">
         <h1> hola</h1>
     </div>
+    <div class="parrafo">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate est quam vero esse, alias obcaecati veritatis repellat iusto accusantium ratione facilis earum! Dicta eveniet, nam rem tempore corrupti iusto tenetur?
+        </p>
+    </div>
 </body>
 </html>
